--- a/umap/static/umap/locale/es.json
+++ b/umap/static/umap/locale/es.json
@@ -603,43 +603,45 @@
     "Altitude:": "Altitud:",
     "Right-click to edit": "Haz clic derecho para editar",
     "Draw along routes": "Dibujar siguiendo rutas",
-    "Skipping invalid geometry": "Skipping invalid geometry",
-    "Add filter": "Add filter",
-    "Min/Max": "Min/Max",
-    "Multiple choices": "Multiple choices",
-    "Exclusive choice": "Exclusive choice",
-    "Yes/No": "Yes/No",
-    "Add a field prior to create a filter.": "Add a field prior to create a filter.",
-    "Edit this filter": "Edit this filter",
-    "Remove this filter": "Remove this filter",
-    "Apply filter to": "Apply filter to",
-    "Filter on": "Filter on",
-    "Human readable name of the filter": "Human readable name of the filter",
-    "Widget for the filter": "Widget for the filter",
-    "Edit filter": "Edit filter",
-    "Edit this field": "Edit this field",
-    "all layers": "all layers",
-    "single layer": "single layer",
-    "unset": "unset",
-    "Filters will be displayed in the data browser to ease data selection.": "Filters will be displayed in the data browser to ease data selection.",
-    "[key=\"value\"][key2=\"value2\"] (eg. [boundary=\"educational\"][name=\"Académie de Lyon\"])": "[key=\"value\"][key2=\"value2\"] (eg. [boundary=\"educational\"][name=\"Académie de Lyon\"])",
-    "Field Name": "Field Name",
-    "Field Type": "Field Type",
-    "Manage field": "Manage field",
-    "Add filter for this field": "Add filter for this field",
-    "Name cannot be empty.": "Name cannot be empty.",
-    "Are you sure you want to delete this field on all the data?": "Are you sure you want to delete this field on all the data?",
-    "Anonymous map": "Anonymous map",
-    "Edit filter for this field": "Edit filter for this field",
-    "Fields, filters and keys": "Fields, filters and keys",
-    "Hey, you created a map without an account!": "Hey, you created a map without an account!",
-    "This map is anonymous, do you want to attach it to your account?": "This map is anonymous, do you want to attach it to your account?",
-    "The map has been upgraded to latest version, please save it.": "The map has been upgraded to latest version, please save it.",
-    "Elevation has been added!": "Elevation has been added!",
+    "Skipping invalid geometry": "Omitiendo geometría no válida",
+    "Add filter": "Agregar filtro",
+    "Min/Max": "Mín/Máx",
+    "Multiple choices": "Opciones múltiples",
+    "Exclusive choice": "Opción exclusiva",
+    "Yes/No": "Sí/No",
+    "Add a field prior to create a filter.": "Agrega un campo antes de crear un filtro.",
+    "Edit this filter": "Editar este filtro",
+    "Remove this filter": "Eliminar este filtro",
+    "Apply filter to": "Aplicar filtro a",
+    "Filter on": "Filtrar por",
+    "Human readable name of the filter": "Nombre legible del filtro",
+    "Widget for the filter": "Widget del filtro",
+    "Edit filter": "Editar filtro",
+    "Edit this field": "Editar este campo",
+    "all layers": "todas las capas",
+    "single layer": "una sola capa",
+    "unset": "no establecido",
+    "Filters will be displayed in the data browser to ease data selection.": "Los filtros se mostrarán en el navegador de datos para facilitar la selección de información.",
+    "[key=\"value\"][key2=\"value2\"] (eg. [boundary=\"educational\"][name=\"Académie de Lyon\"])": "[key=\"value\"][key2=\"value2\"] (por ejemplo, [boundary=\"educational\"][name=\"Académie de Lyon\"])",
+    "Field Name": "Nombre del campo",
+    "Field Type": "Tipo de campo",
+    "Manage field": "Administrar campo",
+    "Add filter for this field": "Agregar filtro para este campo",
+    "Name cannot be empty.": "El nombre no puede estar vacío.",
+    "Are you sure you want to delete this field on all the data?": "¿Estás seguro de que quieres eliminar este campo de todos los datos?",
+    "Anonymous map": "Mapa anónimo",
+    "Edit filter for this field": "Editar filtro para este campo",
+    "Hey, you created a map without an account!": "¡Creaste un mapa sin una cuenta!",
+    "This map is anonymous, do you want to attach it to your account?": "Este mapa es anónimo, ¿quieres vincularlo a tu cuenta?",
+    "The map has been upgraded to latest version, please save it.": "El mapa se ha actualizado a la última versión, guárdalo.",
+    "Elevation has been added!": "¡Se agregó la elevación!",
     "Mapillary": "Mapillary",
     "Wikidata": "Wikidata",
-    "Wikipedia contributors": "Wikipedia contributors",
-    "See on Wikipedia": "See on Wikipedia",
-    "Anonymous map: update who can see and edit it": "Anonymous map: update who can see and edit it",
-    "Login": "Login"
+    "Wikipedia contributors": "Colaboradores de Wikipedia",
+    "See on Wikipedia": "Ver en Wikipedia",
+    "Anonymous map: update who can see and edit it": "Mapa anónimo: actualiza quién puede verlo y editarlo",
+    "Login": "Iniciar sesión",
+    "Manage filters": "Manage filters",
+    "Map (all layers)": "Map (all layers)",
+    "Add a filter for this field": "Add a filter for this field"
 }
