--- a/umap/static/umap/locale/zh_TW.json
+++ b/umap/static/umap/locale/zh_TW.json
@@ -604,42 +604,44 @@
     "Right-click to edit": "按右鍵來編輯",
     "Draw along routes": "沿著路線繪製",
     "Skipping invalid geometry": "略過無效的地理空間",
-    "Add filter": "Add filter",
-    "Min/Max": "Min/Max",
-    "Multiple choices": "Multiple choices",
-    "Exclusive choice": "Exclusive choice",
-    "Yes/No": "Yes/No",
-    "Add a field prior to create a filter.": "Add a field prior to create a filter.",
-    "Edit this filter": "Edit this filter",
-    "Remove this filter": "Remove this filter",
-    "Apply filter to": "Apply filter to",
-    "Filter on": "Filter on",
-    "Human readable name of the filter": "Human readable name of the filter",
-    "Widget for the filter": "Widget for the filter",
-    "Edit filter": "Edit filter",
-    "Edit this field": "Edit this field",
-    "all layers": "all layers",
-    "single layer": "single layer",
-    "unset": "unset",
-    "Filters will be displayed in the data browser to ease data selection.": "Filters will be displayed in the data browser to ease data selection.",
+    "Add filter": "新增篩選",
+    "Min/Max": "最小/最大",
+    "Multiple choices": "多重選擇",
+    "Exclusive choice": "單一選擇",
+    "Yes/No": "是/否",
+    "Add a field prior to create a filter.": "在新增篩選前新增欄位。",
+    "Edit this filter": "編輯這個篩選",
+    "Remove this filter": "移除這個篩選",
+    "Apply filter to": "套用篩選到",
+    "Filter on": "篩選啟用",
+    "Human readable name of the filter": "這個篩選的人類可讀名稱",
+    "Widget for the filter": "這個篩選的小工具",
+    "Edit filter": "編輯篩選",
+    "Edit this field": "編輯這個欄位",
+    "all layers": "所有圖層",
+    "single layer": "單一圖層",
+    "unset": "取消設定",
+    "Filters will be displayed in the data browser to ease data selection.": "資料瀏覽器會顯示篩選，來減少資料選擇程度。",
     "[key=\"value\"][key2=\"value2\"] (eg. [boundary=\"educational\"][name=\"Académie de Lyon\"])": "[key=\"value\"][key2=\"value2\"] (eg. [boundary=\"educational\"][name=\"Académie de Lyon\"])",
-    "Field Name": "Field Name",
-    "Field Type": "Field Type",
-    "Manage field": "Manage field",
-    "Add filter for this field": "Add filter for this field",
-    "Name cannot be empty.": "Name cannot be empty.",
-    "Are you sure you want to delete this field on all the data?": "Are you sure you want to delete this field on all the data?",
-    "Anonymous map": "Anonymous map",
-    "Edit filter for this field": "Edit filter for this field",
-    "Fields, filters and keys": "Fields, filters and keys",
-    "Hey, you created a map without an account!": "Hey, you created a map without an account!",
-    "This map is anonymous, do you want to attach it to your account?": "This map is anonymous, do you want to attach it to your account?",
-    "The map has been upgraded to latest version, please save it.": "The map has been upgraded to latest version, please save it.",
-    "Elevation has been added!": "Elevation has been added!",
+    "Field Name": "欄位名稱",
+    "Field Type": "欄位類型",
+    "Manage field": "管理篩選",
+    "Add filter for this field": "新增篩選到這一欄位",
+    "Name cannot be empty.": "名稱無法是空白的。",
+    "Are you sure you want to delete this field on all the data?": "你確定要刪除所有資料當中的這個欄位？",
+    "Anonymous map": "暱名地圖",
+    "Edit filter for this field": "為這個欄位編輯篩選",
+    "Hey, you created a map without an account!": "嗨，你在沒有帳號狀態下創建地圖！",
+    "This map is anonymous, do you want to attach it to your account?": "這份地圖是暱名的，你想要連結到你的帳號嗎？",
+    "The map has been upgraded to latest version, please save it.": "這份地圖已經更新至最新版本，請先儲存。",
+    "Elevation has been added!": "已經新增海拔高度了！",
     "Mapillary": "Mapillary",
     "Wikidata": "Wikidata",
-    "Wikipedia contributors": "Wikipedia contributors",
-    "See on Wikipedia": "See on Wikipedia",
-    "Anonymous map: update who can see and edit it": "Anonymous map: update who can see and edit it",
-    "Login": "Login"
+    "Wikipedia contributors": "維基百科貢獻者",
+    "See on Wikipedia": "在維基百科上檢視",
+    "Anonymous map: update who can see and edit it": "暱名地圖，任何人都可以檢視與編輯",
+    "Login": "登入",
+    "Manage filters": "Manage filters",
+    "Map (all layers)": "Map (all layers)",
+    "Add a filter for this field": "Add a filter for this field"
 }
