--- a/umap/static/umap/locale/fa_IR.json
+++ b/umap/static/umap/locale/fa_IR.json
@@ -70,7 +70,7 @@
     "color": "رنگ",
     "Comma separated list of numbers, including min and max values.": "فهرست اعداد جداشده با کاما، شامل مقدارهای کمینه و بیشینه.",
     "Comma separated list of properties to use for sorting features. To reverse the sort, put a minus sign (-) before. Eg. mykey,-otherkey.": "فهرست ویژگی‌ها برای استفاده در مرتب‌سازی عنصرها (جداشده با کاما). برای ترتیب معکوس، یک منها قبل آن بگذارید. مثلاًmykey, -othrekey.",
-    "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the beginning of the header, case insensitive. All other column are imported as properties.": "مقادیر جداشده با کاما، تب یا سمی‌کالن. SRS WGS84 پیشفرض است. فقط نقطه‌ها درون‌برد می‌شوند. درون‌بردکننده به سرستون‌ها نگاه می‌کند تا هرگونه ذکر عبارت «lat» و «lon» را در ابتدای سرستون بیابد. به بزرگی و کوچکی حروف حساس نیست. همهٔ ستون‌های دیگر به عنوان ویژگی درون‌برد می‌شوند.",
+    "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the beginning of the header, case insensitive. All other column are imported as properties.": "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the beginning of the header, case insensitive. All other column are imported as properties.",
     "Congratulations, your map has been created!": "تبریک، نقشهٔ شما ساخته شد!",
     "Continue line": "ادامه‌دادن به خط",
     "Coordinates": "مختصات",
@@ -631,7 +631,6 @@
     "Are you sure you want to delete this field on all the data?": "Are you sure you want to delete this field on all the data?",
     "Anonymous map": "Anonymous map",
     "Edit filter for this field": "Edit filter for this field",
-    "Fields, filters and keys": "Fields, filters and keys",
     "Hey, you created a map without an account!": "Hey, you created a map without an account!",
     "This map is anonymous, do you want to attach it to your account?": "This map is anonymous, do you want to attach it to your account?",
     "The map has been upgraded to latest version, please save it.": "The map has been upgraded to latest version, please save it.",
@@ -641,5 +640,15 @@
     "Wikipedia contributors": "Wikipedia contributors",
     "See on Wikipedia": "See on Wikipedia",
     "Anonymous map: update who can see and edit it": "Anonymous map: update who can see and edit it",
-    "Login": "Login"
+    "Login": "Login",
+    "Manage filters": "Manage filters",
+    "Map (all layers)": "Map (all layers)",
+    "Add a filter for this field": "Add a filter for this field",
+    "short text": "short text",
+    "text": "text",
+    "number": "number",
+    "date": "date",
+    "date and time": "date and time",
+    "list of values": "list of values",
+    "yes / no": "yes / no"
 }
