--- a/umap/static/umap/locale/pt.json
+++ b/umap/static/umap/locale/pt.json
@@ -70,7 +70,7 @@
     "color": "cor",
     "Comma separated list of numbers, including min and max values.": "Lista de números separada por vírgulas, incluindo os valores mínimo e máximo.",
     "Comma separated list of properties to use for sorting features. To reverse the sort, put a minus sign (-) before. Eg. mykey,-otherkey.": "Lista de propriedades separada por vírgulas a utilizar para ordenar os elementos. Para inverter a ordenação, coloque um sinal de menos (-) antes. Por exemplo, umachave,-outrachave.",
-    "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the beginning of the header, case insensitive. All other column are imported as properties.": "Valores separados por vírgula, tabulação ou ponto-e-vírgula. É implícito\n o sistema de referência espacial WGS84. Apenas são importadas as \ngeometrias de ponto. A importação irá ver se aparece no cabeçalho das \ncolunas «lat» e «lon», ignorando diferença de maiúsculas e minúsculas. \nTodas a outras colunas são importadas como propriedades.",
+    "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the beginning of the header, case insensitive. All other column are imported as properties.": "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the beginning of the header, case insensitive. All other column are imported as properties.",
     "Congratulations, your map has been created!": "Parabéns, o seu mapa foi criado!",
     "Continue line": "Continuar linha",
     "Coordinates": "Coordenadas",
@@ -631,7 +631,6 @@
     "Are you sure you want to delete this field on all the data?": "Are you sure you want to delete this field on all the data?",
     "Anonymous map": "Anonymous map",
     "Edit filter for this field": "Edit filter for this field",
-    "Fields, filters and keys": "Fields, filters and keys",
     "Hey, you created a map without an account!": "Hey, you created a map without an account!",
     "This map is anonymous, do you want to attach it to your account?": "This map is anonymous, do you want to attach it to your account?",
     "The map has been upgraded to latest version, please save it.": "The map has been upgraded to latest version, please save it.",
@@ -641,5 +640,15 @@
     "Wikipedia contributors": "Wikipedia contributors",
     "See on Wikipedia": "See on Wikipedia",
     "Anonymous map: update who can see and edit it": "Anonymous map: update who can see and edit it",
-    "Login": "Login"
+    "Login": "Login",
+    "Manage filters": "Manage filters",
+    "Map (all layers)": "Map (all layers)",
+    "Add a filter for this field": "Add a filter for this field",
+    "short text": "short text",
+    "text": "text",
+    "number": "number",
+    "date": "date",
+    "date and time": "date and time",
+    "list of values": "list of values",
+    "yes / no": "yes / no"
 }
