--- a/umap/static/umap/locale/de.json
+++ b/umap/static/umap/locale/de.json
@@ -159,7 +159,6 @@
     "Go to \"{coords}\"": "Gehe zu „{coords}“",
     "Go to the homepage": "Zur Startseite gehen",
     "Go to «{feature}»": "Zu „{feature}“ wechseln",
-    "Heatmap intensity property": "Heatmap-Intensität",
     "Heatmap radius": "Radius der Heatmap",
     "Heatmap": "Heatmap",
     "height": "Höhe",
@@ -255,7 +254,6 @@
     "Open share & download panel": "Teilen & Herunterladen anzeigen",
     "Open this map extent in a map editor to provide more accurate data to OpenStreetMap": "Diesen Kartenauschnitt in einem Karten-Editor öffnen, um genauere Daten für OpenStreetMap bereitzustellen.",
     "OpenStreetMap": "OpenStreetMap",
-    "Optional intensity property for heatmap": "Optionale Intensitätseigenschaft für die Heatmap",
     "Optional. Same as color if not set.": "Optional. Gleich wie Farbe, falls nicht ausgefüllt.",
     "Optional.": "Optional.",
     "Override clustering radius (default 80)": "Gruppierungsradius überschreiben (Standard: 80)",
@@ -644,11 +642,13 @@
     "Manage filters": "Manage filters",
     "Map (all layers)": "Map (all layers)",
     "Add a filter for this field": "Add a filter for this field",
-    "short text": "short text",
-    "text": "text",
-    "number": "number",
-    "date": "date",
-    "date and time": "date and time",
-    "list of values": "list of values",
-    "yes / no": "yes / no"
+    "Short text": "Short text",
+    "Text": "Text",
+    "Number": "Number",
+    "Date": "Date",
+    "Date and time": "Date and time",
+    "List of values": "List of values",
+    "Yes / No": "Yes / No",
+    "Select field to compute intensity": "Select field to compute intensity",
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
 }
