--- a/umap/static/umap/locale/es.json
+++ b/umap/static/umap/locale/es.json
@@ -159,7 +159,6 @@
     "Go to \"{coords}\"": "Ir a \"{coords}\"",
     "Go to the homepage": "Ir a la página de inicio",
     "Go to «{feature}»": "Ir a «{feature}»",
-    "Heatmap intensity property": "Propiedad de intensidad del mapa de calor",
     "Heatmap radius": "Radio del mapa de calor",
     "Heatmap": "Mapa de calor",
     "height": "altura",
@@ -255,7 +254,6 @@
     "Open share & download panel": "Abrir panel de compartir y descargar",
     "Open this map extent in a map editor to provide more accurate data to OpenStreetMap": "Abre esta extensión de mapa en un editor de mapas para proporcionar datos más precisos a OpenStreetMap",
     "OpenStreetMap": "OpenStreetMap",
-    "Optional intensity property for heatmap": "Propiedad de intensidad opcional para mapa de calor",
     "Optional. Same as color if not set.": "Opcional. Igual que el color si no se establece.",
     "Optional.": "Opcional.",
     "Override clustering radius (default 80)": "Anular el radio de agrupamiento (80 por defecto)",
@@ -644,11 +642,13 @@
     "Manage filters": "Manage filters",
     "Map (all layers)": "Map (all layers)",
     "Add a filter for this field": "Add a filter for this field",
-    "short text": "short text",
-    "text": "text",
-    "number": "number",
-    "date": "date",
-    "date and time": "date and time",
-    "list of values": "list of values",
-    "yes / no": "yes / no"
+    "Short text": "Short text",
+    "Text": "Text",
+    "Number": "Number",
+    "Date": "Date",
+    "Date and time": "Date and time",
+    "List of values": "List of values",
+    "Yes / No": "Yes / No",
+    "Select field to compute intensity": "Select field to compute intensity",
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
 }
