--- a/umap/static/umap/locale/eu.json
+++ b/umap/static/umap/locale/eu.json
@@ -159,7 +159,6 @@
     "Go to \"{coords}\"": "Joan \"{coords}\"-ra",
     "Go to the homepage": "Joan hasierako orrira",
     "Go to «{feature}»": "Joan «{feature}» atalera",
-    "Heatmap intensity property": "Bero-maparen intentsitatearen propietatea",
     "Heatmap radius": "Bero-maparen erradioa",
     "Heatmap": "Bero-mapa",
     "height": "altuera",
@@ -255,7 +254,6 @@
     "Open share & download panel": "Ireki partekatzeko eta deskargatzeko panela",
     "Open this map extent in a map editor to provide more accurate data to OpenStreetMap": "Ireki mapa hau mapa-editore batean OpenStreetMap-i datu zehatzagoak emateko",
     "OpenStreetMap": "OpenStreetMap",
-    "Optional intensity property for heatmap": "Bero-maparen intentsitate propietate aukerakoa",
     "Optional. Same as color if not set.": "Aukerakoa. Kolore berdina ezarri ez bada.",
     "Optional.": "Aukerakoa.",
     "Override clustering radius (default 80)": "Gainidatzi multzokatze-erradioa (80 lehenetsia)",
@@ -644,11 +642,13 @@
     "Manage filters": "Manage filters",
     "Map (all layers)": "Map (all layers)",
     "Add a filter for this field": "Add a filter for this field",
-    "short text": "short text",
-    "text": "text",
-    "number": "number",
-    "date": "date",
-    "date and time": "date and time",
-    "list of values": "list of values",
-    "yes / no": "yes / no"
+    "Short text": "Short text",
+    "Text": "Text",
+    "Number": "Number",
+    "Date": "Date",
+    "Date and time": "Date and time",
+    "List of values": "List of values",
+    "Yes / No": "Yes / No",
+    "Select field to compute intensity": "Select field to compute intensity",
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
 }
