--- a/umap/static/umap/locale/fa_IR.json
+++ b/umap/static/umap/locale/fa_IR.json
@@ -159,7 +159,6 @@
     "Go to \"{coords}\"": "برو به «{coords}»",
     "Go to the homepage": "برو به صفحهٔ اصلی",
     "Go to «{feature}»": "برو به «{feature}»",
-    "Heatmap intensity property": "ویژگی برای شدت نقشهٔ حرارتی",
     "Heatmap radius": "شعاع نقشهٔ حرارتی",
     "Heatmap": "نقشهٔ حرارتی",
     "height": "ارتفاع",
@@ -255,7 +254,6 @@
     "Open share & download panel": "پنجرهٔ همرسانی و بارگیری باز شود",
     "Open this map extent in a map editor to provide more accurate data to OpenStreetMap": "این محدوده از نقشه را در یکی از ویرایشگرهای نقشه باز کنید تا داده‌های درست‌تری در اوپن‌استریت‌مپ ارائه کنید",
     "OpenStreetMap": "اوپن‌استریت‌مپ",
-    "Optional intensity property for heatmap": "ویژگی اختیاری برای شدت در نقشهٔ حرارتی",
     "Optional. Same as color if not set.": "اختیاری. اگر تنظیم نشود با رنگ یکسان است.",
     "Optional.": "اختیاری.",
     "Override clustering radius (default 80)": "شعاع خوشه‌بندی (پیشفرض 80)",
@@ -644,11 +642,13 @@
     "Manage filters": "Manage filters",
     "Map (all layers)": "Map (all layers)",
     "Add a filter for this field": "Add a filter for this field",
-    "short text": "short text",
-    "text": "text",
-    "number": "number",
-    "date": "date",
-    "date and time": "date and time",
-    "list of values": "list of values",
-    "yes / no": "yes / no"
+    "Short text": "Short text",
+    "Text": "Text",
+    "Number": "Number",
+    "Date": "Date",
+    "Date and time": "Date and time",
+    "List of values": "List of values",
+    "Yes / No": "Yes / No",
+    "Select field to compute intensity": "Select field to compute intensity",
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
 }
