--- a/umap/static/umap/locale/hu.json
+++ b/umap/static/umap/locale/hu.json
@@ -70,7 +70,7 @@
     "color": "szín",
     "Comma separated list of numbers, including min and max values.": "Vesszővel tagolt számsor, közte a legkisebb és a legnagyobb értékek.",
     "Comma separated list of properties to use for sorting features. To reverse the sort, put a minus sign (-) before. Eg. mykey,-otherkey.": "A jellemzők sorba rendezéséhez használandó tulajdonságok vesszővel tagolt sora. A sorba rendezés megfordításához tegyen mínusz jelet (-) elé. Például: kulcs,-másikkulcs.",
-    "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the beginning of the header, case insensitive. All other column are imported as properties.": "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the beginning of the header, case insensitive. All other column are imported as properties.",
+    "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the beginning of the header, case insensitive. All other column are imported as properties.": "Vesszővel, tabulátorral vagy pontosvesszővel elválasztott értékek (csv). Az SRS WGS84 vetület automatikusan feltételezve van. Csak pontgeometria importálható. Az importálás során a rendszer megvizsgálja az oszlopfejléceket, hogy azok elején szerepel-e a „lat” és „lon” kifejezés, kis- és nagybetűk megkülönböztetése nélkül. Az összes többi oszlop tulajdonságként importálódik.",
     "Congratulations, your map has been created!": "Gratulálunk, a térképe elkészült!",
     "Continue line": "Vonal folytatása",
     "Coordinates": "Koordináták",
@@ -159,7 +159,6 @@
     "Go to \"{coords}\"": "Ugrás ide: {coords}",
     "Go to the homepage": "Ugrás a főoldalra",
     "Go to «{feature}»": "Ugrás ide: «{feature}»",
-    "Heatmap intensity property": "Intenzitástérkép tulajdonságai",
     "Heatmap radius": "Intenzitástérkép sugara",
     "Heatmap": "Intenzitástérkép",
     "height": "magasság",
@@ -255,7 +254,6 @@
     "Open share & download panel": "„Megosztás & letöltés” panel megnyitása",
     "Open this map extent in a map editor to provide more accurate data to OpenStreetMap": "A térképkivágás megnyitása egy térképszerkesztőben, hogy az OpenStreetMapbe pontosabb adatokat lehessen előállítani",
     "OpenStreetMap": "OpenStreetMap",
-    "Optional intensity property for heatmap": "Intenzitástérkép nem kötelező tulajdonsága",
     "Optional. Same as color if not set.": "Nem kötelező. Ha nincs beállítva, akkor ugyanaz, mint a szín.",
     "Optional.": "Nem kötelező.",
     "Override clustering radius (default 80)": "Csoportosítás sugarának felülírása (alapértelmezett: 80)",
@@ -603,7 +601,7 @@
     "Altitude:": "Magasság:",
     "Right-click to edit": "Szerkesztéshez kattintson a jobb gombbal",
     "Draw along routes": "Rajzolás útvonal mentén",
-    "Skipping invalid geometry": "Skipping invalid geometry",
+    "Skipping invalid geometry": "Érvénytelen geometria kihagyása",
     "Add filter": "Szűrő hozzáadása",
     "Min/Max": "min. / max.",
     "Multiple choices": "Többszörös választás",
@@ -613,42 +611,44 @@
     "Edit this filter": "Szűrő szerkesztése",
     "Remove this filter": "Szűrő eltávolítása",
     "Apply filter to": "Szűrő alkalmazása erre:",
-    "Filter on": "Filter on",
+    "Filter on": "Szűrés erre:",
     "Human readable name of the filter": "Szűrő ember által olvasható neve",
     "Widget for the filter": "Widget a szűrőhöz",
     "Edit filter": "Szűrő szerkesztése",
     "Edit this field": "Mező szerkesztése",
     "all layers": "minden réteg",
     "single layer": "egyetlen réteg",
-    "unset": "unset",
+    "unset": "nincs megadva",
     "Filters will be displayed in the data browser to ease data selection.": "A szűrők az adatok böngészésekor fognak látszani, hogy megkönnyítsék az adatok kijelölését",
     "[key=\"value\"][key2=\"value2\"] (eg. [boundary=\"educational\"][name=\"Académie de Lyon\"])": "[kulcs=\"érték\"][kulcs2=\"érték2\"] (eg. [boundary=\"educational\"][name=\"Académie de Lyon\"])",
     "Field Name": "Mező neve",
     "Field Type": "Mező típusa",
     "Manage field": "Mező kezelése",
-    "Add filter for this field": "Add filter for this field",
+    "Add filter for this field": "Szűrő hozzáadása ehhez a mezőhöz",
     "Name cannot be empty.": "A név nem lehet üres",
-    "Are you sure you want to delete this field on all the data?": "Are you sure you want to delete this field on all the data?",
+    "Are you sure you want to delete this field on all the data?": "Biztosan törli ezt a mezőt az összes adatnál?",
     "Anonymous map": "Névtelen térkép",
-    "Edit filter for this field": "Edit filter for this field",
+    "Edit filter for this field": "Szűrő szerkesztése ennél a mezőnél",
     "Hey, you created a map without an account!": "Hahó, fiók nélkül hozott létre egy térképet+",
     "This map is anonymous, do you want to attach it to your account?": "Ez a térkép névtelen; szeretné a fiókjához társítani?",
-    "The map has been upgraded to latest version, please save it.": "The map has been upgraded to latest version, please save it.",
-    "Elevation has been added!": "Elevation has been added!",
+    "The map has been upgraded to latest version, please save it.": "A térkép a legfrissebb verzióra frissült, mentsd el.",
+    "Elevation has been added!": "Magasság hozzáadva",
     "Mapillary": "Mapillary",
     "Wikidata": "Wikidata",
-    "Wikipedia contributors": "Wikipedia contributors",
-    "See on Wikipedia": "See on Wikipedia",
-    "Anonymous map: update who can see and edit it": "Anonymous map: update who can see and edit it",
-    "Login": "Login",
-    "Manage filters": "Manage filters",
-    "Map (all layers)": "Map (all layers)",
-    "Add a filter for this field": "Add a filter for this field",
-    "short text": "short text",
-    "text": "text",
-    "number": "number",
-    "date": "date",
-    "date and time": "date and time",
-    "list of values": "list of values",
-    "yes / no": "yes / no"
+    "Wikipedia contributors": "Wikipédia-közreműködők",
+    "See on Wikipedia": "Lásd a Wikipédián",
+    "Anonymous map: update who can see and edit it": "Névtelen térkép: frissítsd, hogy ki láthatja és ki szerkesztheti",
+    "Login": "Bejelentkezés",
+    "Manage filters": "Szűrők kezelése",
+    "Map (all layers)": "Térkép (minden réteg)",
+    "Add a filter for this field": "Szűrő hozzáadása ehhez a mezőhöz",
+    "Short text": "Rövid szöveg",
+    "Text": "Szöveg",
+    "Number": "Szám",
+    "Date": "Dátum",
+    "Date and time": "Dátum és idő",
+    "List of values": "Értékek felsorolása",
+    "Yes / No": "igen / nem",
+    "Select field to compute intensity": "Select field to compute intensity",
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
 }
