--- a/umap/static/umap/locale/is.json
+++ b/umap/static/umap/locale/is.json
@@ -159,7 +159,6 @@
     "Go to \"{coords}\"": "Fara á \"{coords}\"",
     "Go to the homepage": "Fara á heimasíðuna",
     "Go to «{feature}»": "Fara á «{feature}»",
-    "Heatmap intensity property": "Styrkeigindi fyrir hitakort",
     "Heatmap radius": "Radíus hitakorts",
     "Heatmap": "Hitakort",
     "height": "hæð",
@@ -255,7 +254,6 @@
     "Open share & download panel": "Opna deilingar- og niðurhalsspjald",
     "Open this map extent in a map editor to provide more accurate data to OpenStreetMap": "Opna umfang þessa korts í kortavinnsluforriti til að gefa nákvæmari kortagögn til OpenStreetMap",
     "OpenStreetMap": "OpenStreetMap",
-    "Optional intensity property for heatmap": "Valfrjálst styrkeigindi fyrir hitakort",
     "Optional. Same as color if not set.": "Valfrjálst. Sama og litur ef ekkert er skilgreint.",
     "Optional.": "Valfrjálst.",
     "Override clustering radius (default 80)": "Nota annan radíus klösunar (sjálfgefið 80)",
@@ -644,11 +642,13 @@
     "Manage filters": "Manage filters",
     "Map (all layers)": "Map (all layers)",
     "Add a filter for this field": "Add a filter for this field",
-    "short text": "short text",
-    "text": "text",
-    "number": "number",
-    "date": "date",
-    "date and time": "date and time",
-    "list of values": "list of values",
-    "yes / no": "yes / no"
+    "Short text": "Short text",
+    "Text": "Text",
+    "Number": "Number",
+    "Date": "Date",
+    "Date and time": "Date and time",
+    "List of values": "List of values",
+    "Yes / No": "Yes / No",
+    "Select field to compute intensity": "Select field to compute intensity",
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
 }
