--- a/umap/static/umap/locale/it.json
+++ b/umap/static/umap/locale/it.json
@@ -159,7 +159,6 @@
     "Go to \"{coords}\"": "Vai a “{coords}”",
     "Go to the homepage": "Vai all’homepage",
     "Go to «{feature}»": "Vai a «{feature}»",
-    "Heatmap intensity property": "Proprietà intensità mappa di densità",
     "Heatmap radius": "Raggio mappa di densità",
     "Heatmap": "Mappa di densità (heatmap)",
     "height": "altezza",
@@ -255,7 +254,6 @@
     "Open share & download panel": "Apri pannello di condivisione & scarico",
     "Open this map extent in a map editor to provide more accurate data to OpenStreetMap": "Apri quest'area della mappa nell'editor in modo da fornire dati più accurati in OpenStreeetMap",
     "OpenStreetMap": "OpenStreetMap",
-    "Optional intensity property for heatmap": "Proprietà opzionale per la mappa di densità",
     "Optional. Same as color if not set.": "Opzionale. Stesso colore se non assegnato.",
     "Optional.": "Opzionale.",
     "Override clustering radius (default 80)": "Sovrascrivi raggio di raggruppamento (predefinito 80)",
@@ -644,11 +642,13 @@
     "Manage filters": "Manage filters",
     "Map (all layers)": "Map (all layers)",
     "Add a filter for this field": "Add a filter for this field",
-    "short text": "short text",
-    "text": "text",
-    "number": "number",
-    "date": "date",
-    "date and time": "date and time",
-    "list of values": "list of values",
-    "yes / no": "yes / no"
+    "Short text": "Short text",
+    "Text": "Text",
+    "Number": "Number",
+    "Date": "Date",
+    "Date and time": "Date and time",
+    "List of values": "List of values",
+    "Yes / No": "Yes / No",
+    "Select field to compute intensity": "Select field to compute intensity",
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
 }
