--- a/umap/static/umap/locale/nl.json
+++ b/umap/static/umap/locale/nl.json
@@ -159,7 +159,6 @@
     "Go to \"{coords}\"": "Ga naar \"{coords}\"",
     "Go to the homepage": "Ga naar de thuispagina",
     "Go to «{feature}»": "Ga naar «{feature}»",
-    "Heatmap intensity property": "Eigenschap die intensiteit van de heatmap bepaalt",
     "Heatmap radius": "Doorsnede van de heatmap",
     "Heatmap": "Hittekaart",
     "height": "hoogte",
@@ -255,7 +254,6 @@
     "Open share & download panel": "Open het deel & download paneel",
     "Open this map extent in a map editor to provide more accurate data to OpenStreetMap": "Open dit gedeelte van de kaart in een editor, zodat u de kaartgegeven in Openstreetmap zelf kan bijwerken.",
     "OpenStreetMap": "OpenStreetMap",
-    "Optional intensity property for heatmap": "Optionele eigenschap om voor intensiteit van de heatmap te gebruiken",
     "Optional. Same as color if not set.": "Optioneel. Gelijk aan kleur indien niet ingesteld",
     "Optional.": "Optioneel.",
     "Override clustering radius (default 80)": "Andere clustering doorsnede gebruiken (standaard80)",
@@ -644,11 +642,13 @@
     "Manage filters": "Manage filters",
     "Map (all layers)": "Map (all layers)",
     "Add a filter for this field": "Add a filter for this field",
-    "short text": "short text",
-    "text": "text",
-    "number": "number",
-    "date": "date",
-    "date and time": "date and time",
-    "list of values": "list of values",
-    "yes / no": "yes / no"
+    "Short text": "Short text",
+    "Text": "Text",
+    "Number": "Number",
+    "Date": "Date",
+    "Date and time": "Date and time",
+    "List of values": "List of values",
+    "Yes / No": "Yes / No",
+    "Select field to compute intensity": "Select field to compute intensity",
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
 }
