--- a/umap/static/umap/locale/zh_TW.json
+++ b/umap/static/umap/locale/zh_TW.json
@@ -159,7 +159,6 @@
     "Go to \"{coords}\"": "去  \"{coords}\"",
     "Go to the homepage": "前往首頁",
     "Go to «{feature}»": "轉至 «{feature}»",
-    "Heatmap intensity property": "熱點圖強度屬性",
     "Heatmap radius": "熱點圖半徑",
     "Heatmap": "熱點圖",
     "height": "高度",
@@ -255,7 +254,6 @@
     "Open share & download panel": "開啟分享與下載面板",
     "Open this map extent in a map editor to provide more accurate data to OpenStreetMap": "在地圖編輯器中打開此地圖，提供更多準確資料給 OpenStreetMap",
     "OpenStreetMap": "開放街圖",
-    "Optional intensity property for heatmap": "選用的熱圖 heatmap 強度屬性",
     "Optional. Same as color if not set.": "可選，若您未選取顏色，則採用預設值",
     "Optional.": "可選",
     "Override clustering radius (default 80)": "覆蓋群集分析半徑 (預設80)",
@@ -644,11 +642,13 @@
     "Manage filters": "Manage filters",
     "Map (all layers)": "Map (all layers)",
     "Add a filter for this field": "Add a filter for this field",
-    "short text": "short text",
-    "text": "text",
-    "number": "number",
-    "date": "date",
-    "date and time": "date and time",
-    "list of values": "list of values",
-    "yes / no": "yes / no"
+    "Short text": "Short text",
+    "Text": "Text",
+    "Number": "Number",
+    "Date": "Date",
+    "Date and time": "Date and time",
+    "List of values": "List of values",
+    "Yes / No": "Yes / No",
+    "Select field to compute intensity": "Select field to compute intensity",
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
 }
