--- a/umap/static/umap/locale/gl.json
+++ b/umap/static/umap/locale/gl.json
@@ -159,7 +159,6 @@
     "Go to \"{coords}\"": "Ir a «{coords}»",
     "Go to the homepage": "Ir á páxina de inicio",
     "Go to «{feature}»": "Ir a «{feature}»",
-    "Heatmap intensity property": "Propiedade da intensidade do mapa de calor",
     "Heatmap radius": "Raio do mapa de calor",
     "Heatmap": "Mapa de calor",
     "height": "altura",
@@ -255,7 +254,6 @@
     "Open share & download panel": "Abrir o panel de compartición e descarga",
     "Open this map extent in a map editor to provide more accurate data to OpenStreetMap": "Abrir esta extensión do mapa nun editor de mapas para fornecer datos máis precisos a OpenStreetMap",
     "OpenStreetMap": "OpenStreetMap",
-    "Optional intensity property for heatmap": "Propiedade de intensidade opcional para o mapa de calor",
     "Optional. Same as color if not set.": "Opcional. A mesma cor se non se define.",
     "Optional.": "Opcional.",
     "Override clustering radius (default 80)": "Sobrescribir o raio de agrupamento (predeterminado 80)",
@@ -644,11 +642,13 @@
     "Manage filters": "Manage filters",
     "Map (all layers)": "Map (all layers)",
     "Add a filter for this field": "Add a filter for this field",
-    "short text": "short text",
-    "text": "text",
-    "number": "number",
-    "date": "date",
-    "date and time": "date and time",
-    "list of values": "list of values",
-    "yes / no": "yes / no"
+    "Short text": "Short text",
+    "Text": "Text",
+    "Number": "Number",
+    "Date": "Date",
+    "Date and time": "Date and time",
+    "List of values": "List of values",
+    "Yes / No": "Yes / No",
+    "Select field to compute intensity": "Select field to compute intensity",
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
 }
