--- a/umap/static/umap/locale/ko.json
+++ b/umap/static/umap/locale/ko.json
@@ -159,7 +159,6 @@
     "Go to \"{coords}\"": "Go to \"{coords}\"",
     "Go to the homepage": "Go to the homepage",
     "Go to «{feature}»": "Go to «{feature}»",
-    "Heatmap intensity property": "Heatmap intensity property",
     "Heatmap radius": "Heatmap radius",
     "Heatmap": "히트맵",
     "height": "height",
@@ -255,7 +254,6 @@
     "Open share & download panel": "Open share & download panel",
     "Open this map extent in a map editor to provide more accurate data to OpenStreetMap": "Open this map extent in a map editor to provide more accurate data to OpenStreetMap",
     "OpenStreetMap": "OpenStreetMap",
-    "Optional intensity property for heatmap": "Optional intensity property for heatmap",
     "Optional. Same as color if not set.": "Optional. Same as color if not set.",
     "Optional.": "Optional.",
     "Override clustering radius (default 80)": "Override clustering radius (default 80)",
@@ -644,11 +642,13 @@
     "Manage filters": "Manage filters",
     "Map (all layers)": "Map (all layers)",
     "Add a filter for this field": "Add a filter for this field",
-    "short text": "short text",
-    "text": "text",
-    "number": "number",
-    "date": "date",
-    "date and time": "date and time",
-    "list of values": "list of values",
-    "yes / no": "yes / no"
+    "Short text": "Short text",
+    "Text": "Text",
+    "Number": "Number",
+    "Date": "Date",
+    "Date and time": "Date and time",
+    "List of values": "List of values",
+    "Yes / No": "Yes / No",
+    "Select field to compute intensity": "Select field to compute intensity",
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
 }
