--- a/umap/static/umap/locale/lt.json
+++ b/umap/static/umap/locale/lt.json
@@ -159,7 +159,6 @@
     "Go to \"{coords}\"": "Go to \"{coords}\"",
     "Go to the homepage": "Go to the homepage",
     "Go to «{feature}»": "Eiti į «{feature}»",
-    "Heatmap intensity property": "Tankio žemėlpaio faktorius",
     "Heatmap radius": "Tankio žemėlapio spindulys",
     "Heatmap": "Tankio žemėlapis",
     "height": "aukštis",
@@ -255,7 +254,6 @@
     "Open share & download panel": "Open share & download panel",
     "Open this map extent in a map editor to provide more accurate data to OpenStreetMap": "Atidaryti šį plotą duomenų redagavimui per OpenStreetMap",
     "OpenStreetMap": "OpenStreetMap",
-    "Optional intensity property for heatmap": "Papildomas intensyvumo faktorius",
     "Optional. Same as color if not set.": "Neprivalomas. Toks pats kaip ir spalva, jei nenustatyta.",
     "Optional.": "Optional.",
     "Override clustering radius (default 80)": "Perrašyti grupavimo spindulį (pagal nutylėjimą 80)",
@@ -644,11 +642,13 @@
     "Manage filters": "Manage filters",
     "Map (all layers)": "Map (all layers)",
     "Add a filter for this field": "Add a filter for this field",
-    "short text": "short text",
-    "text": "text",
-    "number": "number",
-    "date": "date",
-    "date and time": "date and time",
-    "list of values": "list of values",
-    "yes / no": "yes / no"
+    "Short text": "Short text",
+    "Text": "Text",
+    "Number": "Number",
+    "Date": "Date",
+    "Date and time": "Date and time",
+    "List of values": "List of values",
+    "Yes / No": "Yes / No",
+    "Select field to compute intensity": "Select field to compute intensity",
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
 }
