--- a/umap/static/umap/locale/pl.json
+++ b/umap/static/umap/locale/pl.json
@@ -159,7 +159,6 @@
     "Go to \"{coords}\"": "Idź do \"{coords}\"",
     "Go to the homepage": "Idź do strony głównej",
     "Go to «{feature}»": "Idź do „{feature}”",
-    "Heatmap intensity property": "Intensywność mapy cieplnej",
     "Heatmap radius": "Promień mapy cieplnej",
     "Heatmap": "Mapa cieplna",
     "height": "wysokość",
@@ -255,7 +254,6 @@
     "Open share & download panel": "Otwórz panel udostępniania i pobierania",
     "Open this map extent in a map editor to provide more accurate data to OpenStreetMap": "Otwórz ten zakres mapy w edytorze, by wprowadzić do OpenStreetMap dokładniejsze dane",
     "OpenStreetMap": "OpenStreetMap",
-    "Optional intensity property for heatmap": "Opcjonalna intensywność mapy cieplnej",
     "Optional. Same as color if not set.": "Opcjonalne. Taki sam jak kolor, jeśli nie podano.",
     "Optional.": "Opcjonalnie.",
     "Override clustering radius (default 80)": "Nadpisz promień grupowania (domyślnie 80)",
@@ -644,11 +642,13 @@
     "Manage filters": "Manage filters",
     "Map (all layers)": "Map (all layers)",
     "Add a filter for this field": "Add a filter for this field",
-    "short text": "short text",
-    "text": "text",
-    "number": "number",
-    "date": "date",
-    "date and time": "date and time",
-    "list of values": "list of values",
-    "yes / no": "yes / no"
+    "Short text": "Short text",
+    "Text": "Text",
+    "Number": "Number",
+    "Date": "Date",
+    "Date and time": "Date and time",
+    "List of values": "List of values",
+    "Yes / No": "Yes / No",
+    "Select field to compute intensity": "Select field to compute intensity",
+    "Optional intensity field to compute heatmap": "Optional intensity field to compute heatmap"
 }
