--- a/umap/locale/pl/LC_MESSAGES/django.po
+++ b/umap/locale/pl/LC_MESSAGES/django.po
@@ -33,7 +33,7 @@ msgstr ""
 
 #: decorators.py:60
 msgid "This map is not publicly available"
-msgstr ""
+msgstr "Ta mapa nie jest dostępna publicznie"
 
 #: middleware.py:19
 msgid "Site is readonly for maintenance"
@@ -85,7 +85,7 @@ msgstr "Każdy"
 
 #: models.py:181 models.py:190 models.py:492
 msgid "Editors and team only"
-msgstr ""
+msgstr "Tylko edytorzy i zespół"
 
 #: models.py:182 models.py:493
 msgid "Owner only"
@@ -93,7 +93,7 @@ msgstr "Tylko właściciel"
 
 #: models.py:185
 msgid "Draft (private)"
-msgstr ""
+msgstr "Szkic (prywatnie)"
 
 #: models.py:186
 msgid "Everyone (public)"
@@ -109,7 +109,7 @@ msgstr "Zablokowane"
 
 #: models.py:192 models.py:487
 msgid "Deleted"
-msgstr ""
+msgstr "Usunięto"
 
 #: models.py:195
 msgid "center"
@@ -145,7 +145,7 @@ msgstr "edytorzy"
 
 #: models.py:224
 msgid "team"
-msgstr ""
+msgstr "zespół"
 
 #: models.py:230 models.py:519
 msgid "edit status"
@@ -161,11 +161,11 @@ msgstr "ustawienia"
 
 #: models.py:243
 msgid "save as template"
-msgstr ""
+msgstr "zapisz jako szablon"
 
 #: models.py:244
 msgid "This map is a template map."
-msgstr ""
+msgstr "Ta mapa jest szablonem"
 
 #: models.py:420
 msgid "Clone of"
@@ -185,87 +185,87 @@ msgstr "Wyświetl tę warstwę po załadowaniu."
 
 #: settings/base.py:283
 msgid "uMap user documentation"
-msgstr ""
+msgstr "Dokumentacja użytkownika uMap"
 
 #: settings/base.py:288
 msgid "Video tutorials"
-msgstr ""
+msgstr "Poradniki wideo"
 
 #: settings/base.py:293
 msgid "OpenStreetMap.org forum"
-msgstr ""
+msgstr "Forum OpenStreetMap.org"
 
 #: settings/base.py:298
 msgid "OpenStreetMap France forum"
-msgstr ""
+msgstr "Forum OpenStreetMap France"
 
 #: settings/base.py:318
 msgid "Art and Culture"
-msgstr ""
+msgstr "Sztuka i Kultura"
 
 #: settings/base.py:319
 msgid "Cycling"
-msgstr ""
+msgstr "Kolarstwo"
 
 #: settings/base.py:320
 msgid "Business"
-msgstr ""
+msgstr "Biznes"
 
 #: settings/base.py:321
 msgid "Environment"
-msgstr ""
+msgstr "Środowisko"
 
 #: settings/base.py:322
 msgid "Education"
-msgstr ""
+msgstr "Edukacja"
 
 #: settings/base.py:323
 msgid "Food and Agriculture"
-msgstr ""
+msgstr "Żywność i rolnictwo"
 
 #: settings/base.py:324
 msgid "Geopolitics"
-msgstr ""
+msgstr "Geopolityka"
 
 #: settings/base.py:325
 msgid "Health"
-msgstr ""
+msgstr "Zdrowie"
 
 #: settings/base.py:326
 msgid "Hiking"
-msgstr ""
+msgstr "Piesze wędrówki"
 
 #: settings/base.py:327
 msgid "History"
-msgstr ""
+msgstr "Historia"
 
 #: settings/base.py:328
 msgid "Public sector"
-msgstr ""
+msgstr "Sektor publiczny"
 
 #: settings/base.py:329
 msgid "Science"
-msgstr ""
+msgstr "Nauka"
 
 #: settings/base.py:330
 msgid "Shopping"
-msgstr ""
+msgstr "Zakupy"
 
 #: settings/base.py:331
 msgid "Sport and Leisure"
-msgstr ""
+msgstr "Sport i wypoczynek"
 
 #: settings/base.py:332
 msgid "Travel"
-msgstr ""
+msgstr "Podróż"
 
 #: settings/base.py:333
 msgid "Transports"
-msgstr ""
+msgstr "Transport"
 
 #: settings/base.py:334
 msgid "Tourism"
-msgstr ""
+msgstr "Turystyka"
 
 #: templates/403.html:8
 msgid ""
@@ -276,16 +276,16 @@ msgstr ""
 
 #: templates/403.html:10 templates/404.html:8
 msgid "← Go to the homepage"
-msgstr ""
+msgstr "← Idź do strony głównej"
 
 #: templates/404.html:7
 msgid "404 Page Not Found"
-msgstr ""
+msgstr "404 nie znaleziono strony"
 
 #: templates/auth/user_detail.html:6
 #, python-format
 msgid "%(current_user)s’s maps"
-msgstr ""
+msgstr "Mapy %(current_user)s"
 
 #: templates/auth/user_detail.html:12
 #, python-format
@@ -299,7 +299,7 @@ msgstr "%(current_user)s nie posiada map."
 
 #: templates/auth/user_form.html:6
 msgid "My Profile"
-msgstr ""
+msgstr "Mój Profil"
 
 #: templates/auth/user_form.html:24 templates/umap/team_form.html:25
 msgid "Save"
@@ -307,17 +307,17 @@ msgstr "Zapisz"
 
 #: templates/auth/user_form.html:30
 msgid "Your current providers"
-msgstr ""
+msgstr "Twoi obecni dostawcy"
 
 #: templates/auth/user_form.html:44
 msgid "Connect to another provider"
-msgstr ""
+msgstr "Połącz się z innym dostawcą"
 
 #: templates/auth/user_form.html:47
 msgid ""
 "It's a good habit to connect your account to more than one provider, in case"
 " one provider becomes unavailable, temporarily or even permanently."
-msgstr ""
+msgstr "Dobrym nawykiem jest połączenie Twojego konta z więcej niż jednym dostawcą, na wypadek gdyby jeden z nich stał się niedostępny, tymczasowo lub nawet na stałe."
 
 #: templates/auth/user_stars.html:6
 #, python-format
@@ -362,7 +362,7 @@ msgstr "Hasło"
 
 #: templates/registration/login.html:52
 msgid "Please choose a provider:"
-msgstr ""
+msgstr "Wybierz dostawcę:"
 
 #: templates/umap/about.html:5 templates/umap/navigation.html:22
 msgid "About"
@@ -486,19 +486,19 @@ msgstr "To jest serwer demonstracyjny, używany do testów i niefinalnych wydań
 
 #: templates/umap/content_footer.html:5
 msgid "An OpenStreetMap project"
-msgstr ""
+msgstr "Projekt OpenStreetMap"
 
 #: templates/umap/content_footer.html:6
 msgid "version"
-msgstr ""
+msgstr "wersja"
 
 #: templates/umap/content_footer.html:7
 msgid "Hosted by"
-msgstr ""
+msgstr "Prowadzone przez"
 
 #: templates/umap/content_footer.html:8
 msgid "Contact"
-msgstr ""
+msgstr "Kontakt"
 
 #: templates/umap/content_footer.html:9 templates/umap/navigation.html:25
 msgid "Help"
@@ -516,11 +516,11 @@ msgstr "Moje Mapy"
 #: templates/umap/dashboard_menu.html:11
 #, python-format
 msgid "My Templates (%(count)s)"
-msgstr ""
+msgstr "Moje szablony (%(count)s)"
 
 #: templates/umap/dashboard_menu.html:13 templates/umap/user_templates.html:6
 msgid "My Templates"
-msgstr ""
+msgstr "Moje szablony"
 
 #: templates/umap/dashboard_menu.html:17
 msgid "My profile"
@@ -528,7 +528,7 @@ msgstr "Mój profil"
 
 #: templates/umap/dashboard_menu.html:20
 msgid "My teams"
-msgstr ""
+msgstr "Mój zespół"
 
 #: templates/umap/home.html:14
 msgid "Map of the uMaps"
@@ -544,7 +544,7 @@ msgstr "Jesteś zalogowany. Kontynuowanie..."
 
 #: templates/umap/map_list.html:15
 msgid "template"
-msgstr ""
+msgstr "szablon"
 
 #: templates/umap/map_list.html:18 views.py:459
 msgid "by"
@@ -552,11 +552,11 @@ msgstr "przez"
 
 #: templates/umap/map_list.html:22
 msgid "See the template"
-msgstr ""
+msgstr "Zobacz szablon"
 
 #: templates/umap/map_list.html:22
 msgid "See the map"
-msgstr ""
+msgstr "Zobacz mapę"
 
 #: templates/umap/map_list.html:28
 msgid "More"
@@ -639,7 +639,7 @@ msgstr "ostatni"
 #: templates/umap/map_table.html:140
 #, python-format
 msgid "Lines per page: %(per_page)s"
-msgstr ""
+msgstr "Linijek na stronę: %(per_page)s"
 
 #: templates/umap/map_table.html:145
 #, python-format
@@ -725,7 +725,7 @@ msgstr "Nie znaleziono mapy."
 
 #: templates/umap/search.html:36
 msgid "Latest created maps in category"
-msgstr ""
+msgstr "Ostatnio utworzone mapy w kategorii"
 
 #: templates/umap/search.html:43
 msgid "Latest created maps"
@@ -737,7 +737,7 @@ msgstr "Znajdź mapy"
 
 #: templates/umap/search_bar.html:14 templates/umap/user_map_table.html:15
 msgid "Any category"
-msgstr ""
+msgstr "Dowolna kategoria"
 
 #: templates/umap/search_bar.html:19
 msgid "Search"
@@ -745,34 +745,34 @@ msgstr "Szukaj"
 
 #: templates/umap/team_confirm_delete.html:6
 msgid "Team deletion"
-msgstr ""
+msgstr "Usunięcie zespołu"
 
 #: templates/umap/team_detail.html:6
 #, python-format
 msgid "%(current_team)s’s maps"
-msgstr ""
+msgstr "Mapy zespołu %(current_team)s"
 
 #: templates/umap/team_detail.html:14
 #, python-format
 msgid "Browse %(current_team)s's maps"
-msgstr ""
+msgstr "Przeglądaj mapy zespołu %(current_team)s"
 
 #: templates/umap/team_detail.html:26
 #, python-format
 msgid "%(current_team)s has no public maps."
-msgstr ""
+msgstr "Zespół %(current_team)s nie ma map publicznych"
 
 #: templates/umap/team_form.html:6
 msgid "Create or edit a team"
-msgstr ""
+msgstr "Utwórz lub edytuj zespół"
 
 #: templates/umap/team_form.html:28
 msgid "Delete this team"
-msgstr ""
+msgstr "Usuń ten zespół"
 
 #: templates/umap/team_form.html:51
 msgid "Add user"
-msgstr ""
+msgstr "Dodaj użytkownika"
 
 #: templates/umap/user_dashboard.html:10
 msgid "Search my maps"
